feat: 初期データベーススキーマを作成し、Flywayによるマイグレーションを設定

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,3 +12,18 @@ spring.devtools.restart.additional-paths=src/main/java,src/main/resources
 # リモート開発を有効化
 spring.devtools.remote.secret=mysecret
 spring.devtools.livereload.enabled=true
+
+# DB接続設定
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.flyway.driver-class-name=org.postgresql.Driver
+spring.flyway.databaseType=postgresql
+
+# JPA設定
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.format_sql=true
+
+# Flyway設定
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
