--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -60,6 +60,12 @@
             <artifactId>flyway-database-postgresql</artifactId>
             <version>11.10.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.34</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
