--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -27,3 +27,8 @@ spring.jpa.properties.hibernate.format_sql=true
 # Flyway設定
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
+
+# JWT
+jwt.secret=${JWT_SECRET}
+jwt.access-ttl=${JWT_ACCESS_TTL:900}
+jwt.refresh-ttl=${JWT_REFRESH_TTL:604800}
