--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
         volumes:
             - .:/workspaces/app # ルートをマウント
         command: sleep infinity
+        restart: unless-stopped
         networks: [ appnet ]
 
     frontend:
@@ -40,6 +41,9 @@ services:
             - S3_BUCKET=${S3_BUCKET}
             - S3_ACCESS_KEY=${S3_ACCESS_KEY}
             - S3_SECRET_KEY=${S3_SECRET_KEY}
+            - JWT_SECRET=${JWT_SECRET}
+            - JWT_ACCESS_TTL=${JWT_ACCESS_TTL}
+            - JWT_REFRESH_TTL=${JWT_REFRESH_TTL}
         depends_on:
             - db
             - minio
