backend(test): テスト用 Clock/Seed と統合テスト

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -28,7 +28,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 
-# JWT
-jwt.secret=${JWT_SECRET}
-jwt.access-ttl=${JWT_ACCESS_TTL:900}
-jwt.refresh-ttl=${JWT_REFRESH_TTL:604800}
+# JWT (JwtProperties: app.jwt.*)
+app.jwt.secret=${JWT_SECRET}
+# 秒で渡された環境変数を Duration として解釈させるため "s" を付与
+app.jwt.access-ttl=${JWT_ACCESS_TTL:900}s
+app.jwt.refresh-ttl=${JWT_REFRESH_TTL:604800}s
