--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -31,5 +31,5 @@ spring.flyway.locations=classpath:db/migration
 # JWT (JwtProperties: app.jwt.*)
 app.jwt.secret=${JWT_SECRET}
 # 秒で渡された環境変数を Duration として解釈させるため "s" を付与
-app.jwt.access-ttl=${JWT_ACCESS_TTL:900}s
-app.jwt.refresh-ttl=${JWT_REFRESH_TTL:604800}s
+app.jwt.access-ttl=${JWT_ACCESS_TTL:15m}
+app.jwt.refresh-ttl=${JWT_REFRESH_TTL:7d}
