backend(config): Media関連プロパティを追加

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,6 +13,10 @@ spring.devtools.restart.additional-paths=src/main/java,src/main/resources
 spring.devtools.remote.secret=mysecret
 spring.devtools.livereload.enabled=true
 
+# アップロードファイルサイズ制限
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+
 # DB接続設定
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
@@ -27,6 +31,14 @@ spring.jpa.properties.hibernate.format_sql=true
 # Flyway設定
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
+
+# S3設定 (S3MediaStorageConfig: app.media.*)
+app.media.bucket=${S3_BUCKET}
+app.media.region=${AWS_REGION}
+app.media.endpoint=${S3_ENDPOINT}
+app.media.access-key=${S3_ACCESS_KEY}
+app.media.secret-key=${S3_SECRET_KEY}
+app.media.path-style-access=true
 
 # JWT (JwtProperties: app.jwt.*)
 app.jwt.secret=${JWT_SECRET}
