backend(security): CORSプリフライトリクエスト対応とデバッグログ追加

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -45,3 +45,7 @@ app.jwt.secret=${JWT_SECRET}
 # 秒で渡された環境変数を Duration として解釈させるため "s" を付与
 app.jwt.access-ttl=${JWT_ACCESS_TTL:15m}
 app.jwt.refresh-ttl=${JWT_REFRESH_TTL:7d}
+
+# Debug logging
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
