backend(config): メディアストレージ設定の更新とS3構成の改善

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -39,6 +39,8 @@ app.media.endpoint=${S3_ENDPOINT}
 app.media.access-key=${S3_ACCESS_KEY}
 app.media.secret-key=${S3_SECRET_KEY}
 app.media.path-style-access=true
+app.media.use-in-memory=${APP_MEDIA_USE_IN_MEMORY:true}
+app.media.key-prefix=${APP_MEDIA_KEY_PREFIX:}
 
 # JWT (JwtProperties: app.jwt.*)
 app.jwt.secret=${JWT_SECRET}
