--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 .env
 AGENTS.md
+node_modules
+.DS_Store
+package-lock.json
+package.json
