--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "dependencies": {
         "@hookform/resolvers": "^5.2.2",
         "@radix-ui/react-alert-dialog": "^1.1.15",
+        "@radix-ui/react-checkbox": "^1.3.3",
+        "@radix-ui/react-context-menu": "^2.2.16",
         "@radix-ui/react-dialog": "^1.1.15",
         "@radix-ui/react-dropdown-menu": "^2.1.16",
         "@radix-ui/react-label": "^2.1.7",
@@ -22,24 +24,25 @@
         "@radix-ui/react-tabs": "^1.1.13",
         "@radix-ui/react-tooltip": "^1.2.8",
         "@tiptap/extension-image": "^3.5.0",
-        "@tiptap/extension-link": "^3.5.0",
-        "@tiptap/extension-table": "^3.5.0",
-        "@tiptap/extension-table-cell": "^3.5.0",
-        "@tiptap/extension-table-header": "^3.5.0",
-        "@tiptap/extension-table-row": "^3.5.0",
-        "@tiptap/pm": "^3.5.0",
-        "@tiptap/react": "^3.5.0",
-        "@tiptap/starter-kit": "^3.5.0",
+        "@tiptap/extension-link": "^3.6.1",
+        "@tiptap/extension-table": "^3.6.1",
+        "@tiptap/extension-table-cell": "^3.6.1",
+        "@tiptap/extension-table-header": "^3.6.1",
+        "@tiptap/extension-table-row": "^3.6.1",
+        "@tiptap/pm": "^3.6.1",
+        "@tiptap/react": "^3.6.1",
+        "@tiptap/starter-kit": "^3.6.1",
         "axios": "^1.12.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "cmdk": "^1.1.1",
         "date-fns": "^4.1.0",
         "lucide-react": "^0.544.0",
-        "next": "15.5.2",
+        "next": "^15.5.4",
         "next-themes": "^0.4.6",
-        "react": "19.1.0",
+        "react": "^18.3.1",
         "react-day-picker": "^9.11.0",
-        "react-dom": "19.1.0",
+        "react-dom": "^18.3.1",
         "react-dropzone": "^14.3.8",
         "react-hook-form": "^7.63.0",
         "sonner": "^2.0.7",
