--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
         "lint": "eslint"
     },
     "dependencies": {
+        "@dnd-kit/core": "^6.3.1",
+        "@dnd-kit/sortable": "^10.0.0",
+        "@dnd-kit/utilities": "^3.2.2",
         "@hookform/resolvers": "^5.2.2",
         "@radix-ui/react-alert-dialog": "^1.1.15",
         "@radix-ui/react-checkbox": "^1.3.3",
@@ -55,6 +58,7 @@
         "@eslint/eslintrc": "^3",
         "@types/node": "^20",
         "@types/react": "^19",
+        
         "@types/react-dom": "^19",
         "autoprefixer": "^10.4.21",
         "eslint": "^9",
