backend(config): テスト環境設定を更新

--- a/backend/src/test/resources/application-test.properties
+++ b/backend/src/test/resources/application-test.properties
@@ -16,6 +16,8 @@ app.media.region=${AWS_REGION:ap-northeast-1}
 app.media.endpoint=${S3_ENDPOINT:http://minio:9000}
 app.media.access-key=${S3_ACCESS_KEY:minioadmin}
 app.media.secret-key=${S3_SECRET_KEY:minioadmin}
+app.media.public-base-url=${S3_PUBLIC_BASE_URL:http://localhost/download/}
+app.media.key-prefix=/media/
 
 # テスト用スキーマ作成にFlywayマイグレーションを使用
 spring.flyway.enabled=true
