backend(config): Bucket4j依存関係を追加し、アプリケーション設定を更新

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -32,6 +32,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 
+# base-url設定 (AppProperties: app.base-url)
+app.base-url=${BASE_URL}
+
 # S3設定 (S3MediaStorageConfig: app.media.*)
 app.media.bucket=${S3_BUCKET}
 app.media.region=${AWS_REGION}
@@ -41,6 +44,7 @@ app.media.secret-key=${S3_SECRET_KEY}
 app.media.path-style-access=true
 app.media.use-in-memory=${APP_MEDIA_USE_IN_MEMORY:true}
 app.media.key-prefix=${APP_MEDIA_KEY_PREFIX:}
+app.media.public-base-url=${S3_PUBLIC_BASE_URL}
 
 # JWT (JwtProperties: app.jwt.*)
 app.jwt.secret=${JWT_SECRET}
