--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,12 +27,14 @@
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-tabs": "^1.1.13",
         "@radix-ui/react-tooltip": "^1.2.8",
+        "@tiptap/core": "^3.6.1",
         "@tiptap/extension-image": "^3.5.0",
         "@tiptap/extension-link": "^3.6.1",
         "@tiptap/extension-table": "^3.6.1",
         "@tiptap/extension-table-cell": "^3.6.1",
         "@tiptap/extension-table-header": "^3.6.1",
         "@tiptap/extension-table-row": "^3.6.1",
+        "@tiptap/html": "^3.6.6",
         "@tiptap/pm": "^3.6.1",
         "@tiptap/react": "^3.6.1",
         "@tiptap/starter-kit": "^3.6.1",
@@ -52,6 +54,8 @@
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.1",
         "tailwindcss-animate": "^1.0.7",
+        "three": "^0.149.0",
+        "vanta": "^0.5.24",
         "zod": "^4.1.11",
         "zustand": "^5.0.8"
     },
@@ -60,12 +64,12 @@
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
+        "@types/three": "^0.149.0",
         "autoprefixer": "^10.4.21",
         "eslint": "^9",
         "eslint-config-next": "15.5.2",
         "postcss": "^8.5.6",
         "tailwindcss": "^3.4.17",
         "typescript": "^5"
-    },
-    "packageManager": "pnpm@10.12.4+sha512.5ea8b0deed94ed68691c9bad4c955492705c5eeb8a87ef86bc62c74a26b037b08ff9570f108b2e4dbd1dd1a9186fea925e527f141c648e85af45631074680184"
+    }
 }
