backend(config): デモリセットスケジューリングと簡易シード設定を追加

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -55,3 +55,16 @@ app.jwt.refresh-ttl=${JWT_REFRESH_TTL:7d}
 # Debug logging
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
+
+# Demo reset scheduling
+app.demo-reset.enabled=${APP_DEMO_RESET_ENABLED:false}
+app.demo-reset.initial-delay=${APP_DEMO_RESET_INITIAL_DELAY:PT1M}
+app.demo-reset.fixed-delay=${APP_DEMO_RESET_FIXED_DELAY:PT30M}
+app.demo-reset.sample-location=${APP_DEMO_RESET_SAMPLE_LOCATION:classpath:/demo/sample_image/*.*}
+app.demo-reset.media-folder=${APP_DEMO_RESET_MEDIA_FOLDER:media}
+app.demo-reset.content-type=${APP_DEMO_RESET_CONTENT_TYPE:image/avif}
+
+# 簡易シード設定（初回起動時のみ）
+app.demo-reset.minimal-seed-on-startup=${APP_DEMO_RESET_MINIMAL_SEED_ON_STARTUP:true}
+app.demo-reset.minimal-seed-script=${APP_DEMO_RESET_MINIMAL_SEED_SCRIPT:db/seed/seed_minimal.sql}
+app.demo-reset.full-seed-script=${APP_DEMO_RESET_FULL_SEED_SCRIPT:db/seed/seed_full.sql}
