--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,7 +63,42 @@ services:
             - db_data:/var/lib/postgresql/data
         ports:
             - "5532:5432"
+        healthcheck:
+            test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}" ]
+            interval: 5s
+            timeout: 5s
+            retries: 5
         restart: unless-stopped
+
+    db-test:
+        image: postgres:15
+        container_name: pf_db_test
+        environment:
+            - POSTGRES_DB=appdb_test
+            - POSTGRES_USER=${POSTGRES_USER}
+            - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+        volumes:
+            - db_test_data:/var/lib/postgresql/data
+        ports:
+            - "5533:5432"
+        healthcheck:
+            test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d appdb_test" ]
+            interval: 5s
+            timeout: 5s
+            retries: 5
+        restart: unless-stopped
+
+    flyway-test:
+        image: flyway/flyway:10
+        container_name: pf_flyway_test
+        depends_on:
+            db-test:
+                condition: service_healthy
+        volumes:
+            - ./backend/src/main/resources/db/migration:/flyway/sql
+        command: >
+            -url=jdbc:postgresql://db-test:5432/appdb_test -user=${POSTGRES_USER} -password=${POSTGRES_PASSWORD} -locations=filesystem:/flyway/sql migrate
+        restart: "no"
 
     minio:
         image: minio/minio:RELEASE.2025-09-07T16-13-09Z
@@ -101,6 +136,7 @@ services:
 
 volumes:
     db_data:
+    db_test_data:
     minio_data:
 
 
