backend(config): テスト用データソース設定をlocalhost:5533に更新し、デモリセット機能を有効化

--- a/backend/src/test/resources/application-test.properties
+++ b/backend/src/test/resources/application-test.properties
@@ -4,8 +4,8 @@ app.jwt.access-ttl=900s
 app.jwt.refresh-ttl=604800s
 
 # --- テスト用データソース設定（デフォルトはローカルPostgresコンテナ） ---
-# 環境変数があれば優先、なければlocalhost:5532を利用
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5532/${POSTGRES_DB:appdb}}
+# 環境変数があれば優先、なければlocalhost:5533（テスト専用DB）を利用
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5533/appdb_test}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:${POSTGRES_USER:appuser}}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:${POSTGRES_PASSWORD:apppass}}
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -29,3 +29,10 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # テスト時にDataSourceを組み込みDBへ置き換えない
 spring.test.database.replace=none
+
+# デモリセット機能を有効化（AdminDemoController/DemoContentResetSchedulerのBean作成に必要）
+app.demo-reset.enabled=true
+# テスト環境では自動シードを無効化（TestDataConfigを使用）
+app.demo-reset.minimal-seed-on-startup=false
+app.demo-reset.minimal-seed-script=classpath:db/seed/seed_minimal.sql
+app.demo-reset.full-seed-script=classpath:db/seed/seed_full.sql
