backend(config): minimal-seed-scriptとfull-seed-scriptのパスをclasspathに変更

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -66,5 +66,5 @@ app.demo-reset.content-type=${APP_DEMO_RESET_CONTENT_TYPE:image/avif}
 
 # 簡易シード設定（初回起動時のみ）
 app.demo-reset.minimal-seed-on-startup=${APP_DEMO_RESET_MINIMAL_SEED_ON_STARTUP:true}
-app.demo-reset.minimal-seed-script=${APP_DEMO_RESET_MINIMAL_SEED_SCRIPT:db/seed/seed_minimal.sql}
-app.demo-reset.full-seed-script=${APP_DEMO_RESET_FULL_SEED_SCRIPT:db/seed/seed_full.sql}
+app.demo-reset.minimal-seed-script=${APP_DEMO_RESET_MINIMAL_SEED_SCRIPT:classpath:db/seed/seed_minimal.sql}
+app.demo-reset.full-seed-script=${APP_DEMO_RESET_FULL_SEED_SCRIPT:classpath:db/seed/seed_full.sql}
