--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -13,6 +13,11 @@ on:
             - "backend/**"
             - ".github/workflows/ci-backend.yml"
 
+permissions:
+    contents: read
+    pull-requests: write
+    issues: write
+
 jobs:
     test:
         name: Test & Coverage
