infra(config): S3presignerEndpointを追加し、Docker Compose設定を更新

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -39,6 +39,7 @@ app.base-url=${BASE_URL}
 app.media.bucket=${S3_BUCKET}
 app.media.region=${AWS_REGION}
 app.media.endpoint=${S3_ENDPOINT}
+app.media.presigner-endpoint=${S3_PRESIGNER_ENDPOINT:}
 app.media.access-key=${S3_ACCESS_KEY}
 app.media.secret-key=${S3_SECRET_KEY}
 app.media.path-style-access=true
