--- a/docker-compose.demo.yml
+++ b/docker-compose.demo.yml
@@ -29,15 +29,20 @@ services:
         restart: unless-stopped
 
     frontend:
-        command: sh -c "npm install && npm run build && npm start"
+        image: node:20
+        container_name: pf_frontend
+        working_dir: /app
+        volumes:
+            - ./frontend:/app
+        command: sh -c "npm install --include=dev && npm run build && npm start"
         ports: [] # 外部ポート非公開（Nginx経由のみ）
         expose:
             - "3000"
         environment:
             - NODE_ENV=production
             - NEXT_PUBLIC_SITE_NAME=${NEXT_PUBLIC_SITE_NAME}
-            - NEXT_PUBLIC_API_URL=https://demo.postflow.work/api
-            - NEXT_PUBLIC_MEDIA_BASE_URL=https://demo.postflow.work/media
+            - NEXT_PUBLIC_API_URL=https://demo.postflow.work
+            - NEXT_PUBLIC_MEDIA_BASE_URL=https://demo.postflow.work
             - NEXT_PUBLIC_MEDIA_BUCKET=${S3_BUCKET}
 
     backend:
@@ -47,7 +52,17 @@ services:
         environment:
             - BASE_URL=https://demo.postflow.work
             - SPRING_PROFILES_ACTIVE=demo
-            - S3_PUBLIC_BASE_URL=https://demo.postflow.work/media/${S3_BUCKET}/
+            - S3_ENDPOINT=${S3_ENDPOINT}
+            - S3_PRESIGNER_ENDPOINT=${S3_PRESIGNER_ENDPOINT}
+            - S3_ACCESS_KEY=${S3_ACCESS_KEY}
+            - S3_SECRET_KEY=${S3_SECRET_KEY}
+            - S3_BUCKET=${S3_BUCKET}
+            - APP_DEMO_RESET_MINIMAL_SEED_ON_STARTUP=${APP_DEMO_RESET_MINIMAL_SEED_ON_STARTUP}
+            - POSTGRES_HOST=pf_postgres
+            - POSTGRES_DB=${POSTGRES_DB}
+            - POSTGRES_USER=${POSTGRES_USER}
+            - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+            - JWT_SECRET=${JWT_SECRET}
 
     db:
         ports: [] # 外部ポート非公開（内部通信のみ）
@@ -68,6 +83,7 @@ services:
         environment:
             - MINIO_ROOT_USER=${MINIO_ROOT_USER}
             - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
+            - MINIO_SERVER_URL=https://demo.postflow.work/media
             - MINIO_CORS_ALLOW_ORIGIN=https://demo.postflow.work
             - MINIO_CORS_ALLOW_METHODS=GET,PUT,POST,DELETE,HEAD
             - MINIO_CORS_ALLOW_HEADERS=*
