infra(config): APP_DEMO_RESET_MINIMAL_SEED_ON_STARTUP環境変数をbackendサービスに追加

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
             - APP_DEMO_RESET_ENABLED=${APP_DEMO_RESET_ENABLED}
             - APP_DEMO_RESET_INITIAL_DELAY=${APP_DEMO_RESET_INITIAL_DELAY}
             - APP_DEMO_RESET_FIXED_DELAY=${APP_DEMO_RESET_FIXED_DELAY}
+            - APP_DEMO_RESET_MINIMAL_SEED_ON_STARTUP=${APP_DEMO_RESET_MINIMAL_SEED_ON_STARTUP}
         depends_on:
             - db
             - minio
