infra(nginx): 基本認証を追加し、ヘルスチェックの認証を無効化

--- a/nginx/conf.d/demo.conf
+++ b/nginx/conf.d/demo.conf
@@ -32,9 +32,14 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
 
-    # ヘルスチェックエンドポイント（nginx 自身の死活監視用）
+    # 基本認証（サービス全体に適用）
+    auth_basic "Restricted Access";
+    auth_basic_user_file /etc/nginx/auth/.htpasswd;
+    
+    # ヘルスチェックは認証不要
     location /health {
         access_log off;
+        auth_basic off;  # 認証を無効化
         return 200 "healthy\n";
         add_header Content-Type text/plain;
     }
@@ -58,7 +63,7 @@ server {
 
     # Backend API（Spring Boot）
     location /api/ {
-        proxy_pass http://pf_backend:8080;
+        proxy_pass http://pf_backend:8080/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -72,11 +77,13 @@ server {
     }
 
     # MinIO Media Storage（S3互換）
-    # /media/ は MinIO のバケット名として扱われるため、そのまま転送
+    # /media/ はバケット名として、そのまま MinIO にプロキシ
     location /media/ {
         proxy_pass http://pf_minio:9000/media/;
-        proxy_set_header Host $host;
+        proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_buffering off;
         proxy_request_buffering off;
         
