--- a/docker-compose.demo.yml
+++ b/docker-compose.demo.yml
@@ -11,7 +11,8 @@ services:
         volumes:
             - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
             - ./nginx/conf.d:/etc/nginx/conf.d:ro
-            - /etc/letsencrypt:/etc/letsencrypt:ro # VPS上で設定済みのSSL証明書をマウント
+            - /etc/letsencrypt:/etc/letsencrypt:ro
+            - ./nginx/auth:/etc/nginx/auth:ro
         depends_on:
             frontend:
                 condition: service_started
