infra(nginx): APIのベーシック認証を除外し、JWT認証のみを適用

--- a/nginx/conf.d/demo.conf
+++ b/nginx/conf.d/demo.conf
@@ -63,6 +63,7 @@ server {
 
     # Backend API（Spring Boot）
     location /api/ {
+        auth_basic off;  # APIはJWT認証のみでベーシック認証を除外
         proxy_pass http://pf_backend:8080/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
