infra(nginx): MinIOのベーシック認証を除外

--- a/nginx/conf.d/demo.conf
+++ b/nginx/conf.d/demo.conf
@@ -80,6 +80,7 @@ server {
     # MinIO Media Storage（S3互換）
     # /media/ はバケット名として、そのまま MinIO にプロキシ
     location /media/ {
+        auth_basic off;  # minioはベーシック認証を除外
         proxy_pass http://pf_minio:9000/media/;
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
