--- a/nginx/conf.d/demo.conf
+++ b/nginx/conf.d/demo.conf
@@ -86,6 +86,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Authorization "";  # ブラウザのBasic認証ヘッダーをMinIOへ渡さない
         proxy_buffering off;
         proxy_request_buffering off;
         
