--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
             - S3_ACCESS_KEY=${S3_ACCESS_KEY}
             - S3_SECRET_KEY=${S3_SECRET_KEY}
             - S3_PUBLIC_BASE_URL=${S3_PUBLIC_BASE_URL}
+            - S3_PRESIGNER_ENDPOINT=${S3_PRESIGNER_ENDPOINT}
             - APP_MEDIA_USE_IN_MEMORY=${APP_MEDIA_USE_IN_MEMORY}
             - APP_MEDIA_KEY_PREFIX=${APP_MEDIA_KEY_PREFIX}
             - JWT_SECRET=${JWT_SECRET}
