--- a/.env.example
+++ b/.env.example
@@ -1,30 +1,32 @@
-# base URL
+# ベースURL
 BASE_URL=http://localhost:3000
-# Frontend
+
+# フロントエンド
 NEXT_PUBLIC_SITE_NAME="PostFlow"
-NEXT_PUBLIC_API_URL=http://host.docker.internal:8080
-NEXT_PUBLIC_MEDIA_BASE_URL=http://host.docker.internal:9000
+NEXT_PUBLIC_API_URL=http://localhost:3000
+NEXT_SERVER_API_URL=http://backend:8080
+NEXT_PUBLIC_MEDIA_BASE_URL=http://localhost:3000
 NEXT_PUBLIC_MEDIA_BUCKET=media
 
-# Backend - DB
+# バックエンド - DB 接続
 SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/appdb
 SPRING_DATASOURCE_USERNAME=appuser
 SPRING_DATASOURCE_PASSWORD=apppass
 
-# demo用。CI・本番ではfalseに変更する
+# デモ用設定（CI・本番では false に変更）
 APP_DEMO_RESET_ENABLED=true
 APP_DEMO_RESET_INITIAL_DELAY=PT0S
 APP_DEMO_RESET_FIXED_DELAY=PT30M
 APP_DEMO_RESET_MINIMAL_SEED_ON_STARTUP=true
 
-# Backend - AWS (MinIO S3互換)
+# バックエンド - AWS (MinIO S3 互換)
 AWS_REGION=ap-northeast-1
 S3_ENDPOINT=http://minio:9000
-S3_PRESIGNER_ENDPOINT=http://host.docker.internal:9000
+S3_PRESIGNER_ENDPOINT=http://localhost:9000
 S3_BUCKET=media
 S3_ACCESS_KEY=minioadmin
 S3_SECRET_KEY=minioadmin
-S3_PUBLIC_BASE_URL=http://host.docker.internal:9000/media
+S3_PUBLIC_BASE_URL=http://localhost:9000/media
 APP_MEDIA_USE_IN_MEMORY=false
 APP_MEDIA_KEY_PREFIX=
 
@@ -37,7 +39,7 @@ POSTGRES_PASSWORD=apppass
 MINIO_ROOT_USER=minioadmin
 MINIO_ROOT_PASSWORD=minioadmin
 
-# User ID for Docker
+# Docker 用ユーザー ID
 UID=1000
 GID=1000
 
@@ -52,4 +54,4 @@ PORT_BACKEND=8080
 PORT_DB=5432
 PORT_DB_TEST=5433
 PORT_MINIO_API=9000
-PORT_MINIO_CONSOLE=9101
+PORT_MINIO_CONSOLE=9001
