infra(env): デモ用設定を修正し、コンテンツリセットスケジューラを無効に変更

--- a/.env.example
+++ b/.env.example
@@ -13,10 +13,10 @@ SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/appdb
 SPRING_DATASOURCE_USERNAME=appuser
 SPRING_DATASOURCE_PASSWORD=apppass
 
-# デモ用設定（CI・本番では false に変更）
-APP_DEMO_RESET_ENABLED=true
+# デモ用設定 - コンテンツリセットスケジューラ
+APP_DEMO_RESET_ENABLED=false
 APP_DEMO_RESET_INITIAL_DELAY=PT0S
-APP_DEMO_RESET_FIXED_DELAY=PT30M
+APP_DEMO_RESET_FIXED_DELAY=PT60M
 APP_DEMO_RESET_MINIMAL_SEED_ON_STARTUP=true
 
 # バックエンド - AWS (MinIO S3 互換)
