infra(ci): フロントエンドビルド環境変数を追加

--- a/.github/workflows/ci-full.yml
+++ b/.github/workflows/ci-full.yml
@@ -88,7 +88,10 @@ jobs:
               run: npm run build
               env:
                   NEXT_PUBLIC_API_BASE_URL: http://localhost:8100
-
+                  NEXT_PUBLIC_API_URL: http://localhost:8100
+                  NEXT_PUBLIC_MEDIA_BASE_URL: http://localhost:3000
+                  NEXT_PUBLIC_MEDIA_BUCKET: media
+                  NODE_ENV: production
     integration-check:
         name: Integration Check
         runs-on: ubuntu-latest
