--- a/.github/workflows/ci-full.yml
+++ b/.github/workflows/ci-full.yml
@@ -102,7 +102,7 @@ jobs:
               uses: actions/checkout@v4
 
             - name: Validate docker-compose.yml
-              run: docker compose config
+              run: docker compose --env-file .env.example config
 
             - name: Check backend health
               run: |
