--- a/.env.demo
+++ b/.env.demo
@@ -1,24 +1,25 @@
-# base URL
+# ベースURL
 BASE_URL=https://demo.postflow.work
 
-# Frontend
+# フロントエンド
 NEXT_PUBLIC_SITE_NAME="PostFlow"
 NEXT_PUBLIC_API_URL=https://demo.postflow.work
+NEXT_SERVER_API_URL=http://demo.postflow.work
 NEXT_PUBLIC_MEDIA_BASE_URL=https://demo.postflow.work/media
 NEXT_PUBLIC_MEDIA_BUCKET=media
 
-# Backend - DB
+# バックエンド - DB 接続
 SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/appdb
 SPRING_DATASOURCE_USERNAME=appuser
 SPRING_DATASOURCE_PASSWORD=apppass
 
-# Backend - Demo Content Reset Scheduler
+# デモ用設定 - コンテンツリセットスケジューラ
 APP_DEMO_RESET_ENABLED=true
 APP_DEMO_RESET_INITIAL_DELAY=PT0S
 APP_DEMO_RESET_FIXED_DELAY=PT30M
-APP_DEMO_RESET_MINIMAL_SEED_ON_STARTUP=false
+APP_DEMO_RESET_MINIMAL_SEED_ON_STARTUP=true
 
-# Backend - AWS (MinIO S3互換)
+# バックエンド - AWS (MinIO S3 互換)
 AWS_REGION=ap-northeast-1
 S3_ENDPOINT=http://minio:9000
 S3_PRESIGNER_ENDPOINT=https://demo.postflow.work
@@ -38,7 +39,7 @@ POSTGRES_PASSWORD=apppass
 MINIO_ROOT_USER=minioadmin
 MINIO_ROOT_PASSWORD=minioadmin
 
-# User ID for Docker
+# Docker 用ユーザー ID
 UID=1000
 GID=1000
 
