--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
         working_dir: /app
         volumes:
             - ./frontend:/app
+            - /app/node_modules
         command: sh -c "npm install && npm run dev"
         ports:
             - "${PORT_FRONTEND}:${PORT_FRONTEND}"
