infra(nginx): フロントエンド、バックエンド、MinIOのプロキシパスのフォーマットを統一

--- a/nginx/conf.d/demo.conf
+++ b/nginx/conf.d/demo.conf
@@ -46,7 +46,7 @@ server {
 
     # Frontend（Next.js）
     location / {
-        proxy_pass http://pf_frontend:3000;
+        proxy_pass http://pf-frontend:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -64,7 +64,7 @@ server {
     # Backend API（Spring Boot）
     location /api/ {
         auth_basic off;  # APIはJWT認証のみでベーシック認証を除外
-        proxy_pass http://pf_backend:8080/api/;
+        proxy_pass http://pf-backend:8080/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -81,7 +81,7 @@ server {
     # /media/ はバケット名として、そのまま MinIO にプロキシ
     location /media/ {
         auth_basic off;  # minioはベーシック認証を除外
-        proxy_pass http://pf_minio:9000/media/;
+        proxy_pass http://pf-minio:9000/media/;
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
