infra(CD): 環境変数をシークレットに変更

--- a/.github/workflows/deploy-vps.yml
+++ b/.github/workflows/deploy-vps.yml
@@ -18,11 +18,34 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: production
-    env:
-      VPS_PROJECT_DIR: ${{ vars.VPS_PROJECT_DIR }}
-      VPS_ENV: ${{ vars.VPS_ENV }}
 
     steps:
+      - name: Validate required secrets
+        env:
+          VPS_HOST: ${{ secrets.VPS_HOST }}
+          VPS_USER: ${{ secrets.VPS_USER }}
+          VPS_SSH_KEY: ${{ secrets.VPS_SSH_KEY }}
+          VPS_PROJECT_DIR: ${{ secrets.VPS_PROJECT_DIR }}
+          VPS_SSH_PORT: ${{ secrets.VPS_SSH_PORT }}
+          VPS_ENV: ${{ secrets.VPS_ENV }}
+        run: |
+          set -euo pipefail
+
+          missing=0
+          for var in VPS_HOST VPS_USER VPS_SSH_KEY VPS_PROJECT_DIR; do
+            if [ -z "${!var:-}" ]; then
+              echo "::error title=Missing secret::${var} is not configured for this workflow."
+              missing=1
+            fi
+          done
+
+          if [ "${missing}" -ne 0 ]; then
+            echo "One or more required secrets are missing. Aborting before deployment."
+            exit 1
+          fi
+
+          echo "All required secrets are present."
+
       - name: Ensure workflow_run trigger is valid
         if: github.event_name == 'workflow_run'
         run: |
@@ -30,12 +53,20 @@ jobs:
 
       - name: Deploy via SSH
         uses: appleboy/ssh-action@v1.0.3
+        env:
+          VPS_HOST: ${{ secrets.VPS_HOST }}
+          VPS_USER: ${{ secrets.VPS_USER }}
+          VPS_SSH_KEY: ${{ secrets.VPS_SSH_KEY }}
+          VPS_SSH_PORT: ${{ secrets.VPS_SSH_PORT }}
+          VPS_PROJECT_DIR: ${{ secrets.VPS_PROJECT_DIR }}
+          VPS_ENV: ${{ secrets.VPS_ENV }}
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
-          port: ${{ secrets.VPS_SSH_PORT || '22' }}
+          port: ${{ env.VPS_SSH_PORT != '' && env.VPS_SSH_PORT || '22' }}
           script_stop: true
+          envs: VPS_PROJECT_DIR,VPS_ENV
           script: |
             set -Eeuo pipefail
 
@@ -64,7 +95,7 @@ jobs:
             docker compose up -d --remove-orphans
 
             if [ -n "${VPS_ENV:-}" ]; then
-              echo "Deployment environment: ${VPS_ENV}"
+              echo "Deployment environment flag detected."
             fi
 
             echo "$(date '+%Y-%m-%d %H:%M:%S') Deploy completed by GitHub Actions" >> deploy.log
