--- a/.github/workflows/deploy-vps.yml
+++ b/.github/workflows/deploy-vps.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
     deploy:
-        if: >
+        if: >-
             github.event_name == 'workflow_dispatch' ||
             (github.event_name == 'workflow_run' &&
              github.event.workflow_run.conclusion == 'success' &&
@@ -33,15 +33,15 @@ jobs:
 
                   missing=0
                   for var in VPS_HOST VPS_USER VPS_SSH_KEY VPS_PROJECT_DIR; do
-                    if [ -z "${!var:-}" ]; then
-                      echo "::error title=Missing secret::${var} is not configured for this workflow."
-                      missing=1
-                    fi
+                      if [ -z "${!var:-}" ]; then
+                          echo "::error title=Missing secret::${var} is not configured for this workflow."
+                          missing=1
+                      fi
                   done
 
                   if [ "${missing}" -ne 0 ]; then
-                    echo "One or more required secrets are missing. Aborting before deployment."
-                    exit 1
+                      echo "One or more required secrets are missing. Aborting before deployment."
+                      exit 1
                   fi
 
                   echo "All required secrets are present."
@@ -66,20 +66,20 @@ jobs:
                   key: ${{ secrets.VPS_SSH_KEY }}
                   port: ${{ env.VPS_SSH_PORT != '' && env.VPS_SSH_PORT || '22' }}
                   script_stop: true
-          envs: VPS_PROJECT_DIR,VPS_ENV
-          script: |
-            set -Eeuo pipefail
+                  envs: VPS_PROJECT_DIR,VPS_ENV
+                  script: |
+                      set -Eeuo pipefail
 
-            : "${VPS_PROJECT_DIR:?VPS_PROJECT_DIR is required}"
-            LOG_FILE="${VPS_PROJECT_DIR}/.git/deploy.log"
+                      : "${VPS_PROJECT_DIR:?VPS_PROJECT_DIR is required}"
+                      LOG_FILE="${VPS_PROJECT_DIR}/.git/deploy.log"
 
-            echo "Changing directory to ${VPS_PROJECT_DIR}"
-            cd "${VPS_PROJECT_DIR}"
+                      echo "Changing directory to ${VPS_PROJECT_DIR}"
+                      cd "${VPS_PROJECT_DIR}"
 
-            echo "Checking working tree status"
+                      echo "Checking working tree status"
                       if [ -n "$(git status --porcelain)" ]; then
-                        echo "Working tree has uncommitted changes. Aborting deploy."
-                        exit 1
+                          echo "Working tree has uncommitted changes. Aborting deploy."
+                          exit 1
                       fi
 
                       echo "Fetching latest commits"
@@ -95,22 +95,22 @@ jobs:
                       docker compose pull
                       docker compose -f docker-compose.yml -f docker-compose.demo.yml up -d --remove-orphans
 
-            if [ -n "${VPS_ENV:-}" ]; then
-              echo "Deployment environment flag detected."
-            fi
+                      if [ -n "${VPS_ENV:-}" ]; then
+                          echo "Deployment environment flag detected."
+                      fi
 
-            echo "$(date '+%Y-%m-%d %H:%M:%S') Deploy completed by GitHub Actions" >> "${LOG_FILE}"
+                      echo "$(date '+%Y-%m-%d %H:%M:%S') Deploy completed by GitHub Actions" >> "${LOG_FILE}"
 
             - name: Deployment summary
               run: |
-                  echo "## 🚀 Deployment Triggered" >> $GITHUB_STEP_SUMMARY
+                  echo "## Deployment Triggered" >> $GITHUB_STEP_SUMMARY
                   if [ "${{ github.event_name }}" = "workflow_run" ]; then
-                    echo "- Trigger: Full CI Pipeline (run ${{ github.event.workflow_run.id }})" >> $GITHUB_STEP_SUMMARY
-                    echo "- Branch: ${{ github.event.workflow_run.head_branch }}" >> $GITHUB_STEP_SUMMARY
-                    echo "- Commit: ${{ github.event.workflow_run.head_sha }}" >> $GITHUB_STEP_SUMMARY
+                      echo "- Trigger: Full CI Pipeline (run ${{ github.event.workflow_run.id }})" >> $GITHUB_STEP_SUMMARY
+                      echo "- Branch: ${{ github.event.workflow_run.head_branch }}" >> $GITHUB_STEP_SUMMARY
+                      echo "- Commit: ${{ github.event.workflow_run.head_sha }}" >> $GITHUB_STEP_SUMMARY
                   else
-                    echo "- Trigger: Manual workflow_dispatch" >> $GITHUB_STEP_SUMMARY
-                    echo "- Actor: ${{ github.actor }}" >> $GITHUB_STEP_SUMMARY
+                      echo "- Trigger: Manual workflow_dispatch" >> $GITHUB_STEP_SUMMARY
+                      echo "- Actor: ${{ github.actor }}" >> $GITHUB_STEP_SUMMARY
                   fi
                   echo "- Target host: ${{ secrets.VPS_HOST }}" >> $GITHUB_STEP_SUMMARY
                   echo "" >> $GITHUB_STEP_SUMMARY
