--- a/docker-compose.demo.yml
+++ b/docker-compose.demo.yml
@@ -41,6 +41,7 @@ services:
             - "3000"
         environment:
             - NODE_ENV=production
+            - BASE_URL=${BASE_URL}
             - NEXT_PUBLIC_SITE_NAME=${NEXT_PUBLIC_SITE_NAME}
             - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
             - NEXT_SERVER_API_URL=${NEXT_SERVER_API_URL}
