--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
         depends_on:
             - backend
         environment:
+            - BASE_URL=${BASE_URL}
             - NEXT_PUBLIC_SITE_NAME=${NEXT_PUBLIC_SITE_NAME}
             - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
             - NEXT_SERVER_API_URL=${NEXT_SERVER_API_URL}
